objects/Opportunity_Part__c.object
<CustomObject>
    <fields>
        <fullName>Current_Year_add_3_PRICE__c</fullName>
        <label>Current Year + 3 PRICE</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_add_3_QTY__c</fullName>
        <label>Current Year + 3 QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_add_3__c</fullName>
        <description>to save the us-amount from forecasts of current fiscal year + 3</description>
        <label>Current Year + 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_minus_1_PRICE__c</fullName>
        <label>Current Year -1 PRICE</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_minus_1_QTY__c</fullName>
        <label>Current Year - 1 QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_minus_1__c</fullName>
        <description>to save the us-amount from forecasts of current fiscal year -1</description>
        <label>Current Year - 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_minus_2_PRICE__c</fullName>
        <label>Current Year - 2 PRICE</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_minus_2_QTY__c</fullName>
        <label>Current Year - 2 QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_minus_2__c</fullName>
        <description>to save the us-amount from forecasts of current fiscal year -2</description>
        <label>Current Year - 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_End_Product__c</fullName>
        <inlineHelpText>Used by Appliances users Only.

INDUSTRIAL USERS: Please fill in a dummy value for the time being. This field will be available for Appliance users only in the future.</inlineHelpText>
        <label>Customer End Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Industry__c</fullName>
        <formula>Opportunity__r.Account.Customer_Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Part_Description__c</fullName>
        <label>Customer Part Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Part_Number1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Part Number</label>
        <referenceTo>Customer_Part_Number__c</referenceTo>
        <relationshipLabel>Opportunity Parts</relationshipLabel>
        <relationshipName>Opportunity_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Part_Number__c</fullName>
        <description>This field contains the customer part number.</description>
        <label>Customer Part Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Region__c</fullName>
        <formula>Opportunity__r.Account_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Willing_to_Pay_Tooling_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Willing to Pay Tooling Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DGI_Indicator_New__c</fullName>
        <description>field to manually populate the Defend/Grow/Invest indicator for Industrial parts till we have an automatic solution in place. Gets removed as soon as the existing DGI indicator  field gets populated automatically.</description>
        <label>DGI Indicator New</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DGI_Indicator_from_PC__c</fullName>
        <description>This field derives the DGI code from the part record when a proposal part is entered and either the similar TE pn or the newly created TE pn is entered.</description>
        <formula>IF(AND(NOT(ISNULL(Part__c)),NOT(ISBLANK(Part__c))), TEXT(Part__r.DGI__c), TEXT(Similar_TE_Part_Number__r.DGI__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DGI Indicator from PC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DGI_indicator__c</fullName>
        <formula>TEXT(GPL__r.GDI_Classification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DGI indicator from GPL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNDCompetitor__c</fullName>
        <description>Competitor for DND</description>
        <label>Competitor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DND_Product_Family__c</fullName>
        <description>Product Family used in DND, slightly different from CBC3, with shorter name</description>
        <formula>IF(NOT(ISBLANK( GPL__c )), GPL__r.DND_Product_Family__c, IF(NOT(ISBLANK( Part_Number__c )),Part__r.DND_Product_Family__c, GPL__r.DND_Product_Family__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DND Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTC_Request_Quantity__c</fullName>
        <description>DTC requestor can only order 1 to 5 samples</description>
        <label>Request Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D_Part_Safety_Critical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>D-Part/Safety Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataCom_Request_Type__c</fullName>
        <label>DataComm Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Only</fullName>
                </value>
                <value>
                    <fullName>Quote Only</fullName>
                </value>
                <value>
                    <fullName>Sample &amp; Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_TE_Market_Share__c</fullName>
        <label>Desired TE Market Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discontinuance_Status__c</fullName>
        <formula>Part__r.DISCONTINUANCE_STATUS_CDE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discontinuance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountA_A__c</fullName>
        <formula>Discount_A__c *   UnitPrice__c</formula>
        <label>Discount A$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountB_B__c</fullName>
        <formula>Discount_B__c *  UnitPrice__c</formula>
        <label>Discount B$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountC_C__c</fullName>
        <formula>Discount_C__c *  UnitPrice__c</formula>
        <label>Discount C$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_A__c</fullName>
        <label>Discount A%</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_B__c</fullName>
        <label>Discount B%</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_C__c</fullName>
        <label>Discount C%</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <formula>TEXT(Opportunity__r.Distributor__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawing_Number__c</fullName>
        <label>Drawing Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawing_Revision_Number__c</fullName>
        <label>Drawing Revision Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Pricing_Status__c</fullName>
        <label>ERP Pricing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Data</fullName>
                </value>
                <value>
                    <fullName>Data Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Energy_Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Energy Quote Line Item</label>
        <referenceTo>Energy_Quote_Line_Item__c</referenceTo>
        <relationshipLabel>Opportunity Parts</relationshipLabel>
        <relationshipName>Opportunity_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>The error message received from the SAP integration during a pricing/quote creation request</description>
        <label>Error Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimate_Annual_Usage__c</fullName>
        <formula>MAX( 
FCSTYR1QTY__c ,
FCSTYR2QTY__c,
FCSTYR3QTY__c,
FCSTYR4QTY__c,
FCSTYR5QTY__c,
FCSTYR6QTY__c,
FCSTYR7QTY__c,
FCSTYR8QTY__c,
FCSTYR9QTY__c,
FCSTYR10QTY__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimate Annual Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ex_Stock__c</fullName>
        <inlineHelpText>If no ex-stock product is available, full lead times apply</inlineHelpText>
        <label>Ex Stock</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <description>Used to migrate channel Opp Parts.
Will be deleted later</description>
        <externalId>true</externalId>
        <label>External Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCSTYR10AMT__c</fullName>
        <description>Forecast Year 10 Amount</description>
        <label>FCSTYR10AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCSTYR10QTY__c</fullName>
        <description>Forecast Year 10 Quantity</description>
        <label>FCSTYR10QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCSTYR1AMT__c</fullName>
        <description>Forecast Year 1 Amount</description>
        <label>FCSTYR1AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCSTYR1QTY__c</fullName>
        <description>Forecast Year 1 Quantity</description>
        <label>FCSTYR1QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCSTYR2AMT__c</fullName>
        <description>Forecast Year 2 Amount</description>
        <label>FCSTYR2AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCSTYR2QTY__c</fullName>
        <description>Forecast Year 2 Quantity</description>
        <label>FCSTYR2QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_FY10_PRICE__c</fullName>
        <description>Forecast Year 10 Price</description>
        <label>FC_FY10_PRICE</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_FY1_PRICE__c</fullName>
        <description>Forecast Year 1 Price</description>
        <label>FC_FY1_PRICE</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_FY2_PRICE__c</fullName>
        <description>Forecast Year 2 Price</description>
        <label>FC_FY2_PRICE</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fraction_of_sale__c</fullName>
        <label>Fraction of sale</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GIBU_Check__c</fullName>
        <formula>IF( TEXT(Opportunity__r.Industry__c ) = TEXT( Product_Owning_GIBU__c ) , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GIBU Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GIBU_Count__c</fullName>
        <label>GIBU Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPL_Name__c</fullName>
        <description>This field contains the GPL. It is used from Offline App.</description>
        <label>GPL Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GPL</label>
        <referenceTo>Product_Hierarchy__c</referenceTo>
        <relationshipLabel>Opportunity Parts</relationshipLabel>
        <relationshipName>Opportunity_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Cost_set_75__c</fullName>
        <formula>IF(UnitPrice__c =0,0, 
(( UnitPrice__c )-( Cost_Set_75__c ))/(UnitPrice__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin (Cost set 75)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IND_SIP_Profit_Center__c</fullName>
        <description>Needed for IND SIP process</description>
        <formula>CASE( BU_profit_center__c , &quot;IND Systems&quot;, &quot;Systems&quot;, &quot;IND Devices&quot;, &quot;Devices&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IND SIP Profit Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Message__c</fullName>
        <description>The information received from SAP regarding a pricing request</description>
        <label>Info Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Information_Message__c</fullName>
        <description>Information Message from SAP</description>
        <label>Information Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_12_months__c</fullName>
        <label>Initial 12 months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Billing_Date__c</fullName>
        <label>Initial Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Order_Date__c</fullName>
        <label>Initial Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_ADM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ADM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_new_Tyco_Electronics_Part_Number__c</fullName>
        <description>This field is required on RTS Interface. It is used in RTS Mapping Custom Settings. It represents &apos;ISNEWTYCOPART&apos; code in RTS Interface. It is populated from Opportunity_Part__c.Part__c .  If that field is blank, ISNEWTYCOPART should have a value of true (1).  If it is not blank, the value should be false(0).</description>
        <formula>IF( OR( ISBLANK(Part__c), Part__r.Proposal_Part__c ) , 1, 0)</formula>
        <label>Is new Tyco Electronics Part Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_this_Part_Replacing_an_Existing_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this Part Replacing an Existing Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <description>This field shows the part description. In case of sales part the &quot;Part Description&quot;, in case of proposal part the &quot;New Part Description&quot;. If a Part Number is linked to the proposal part, then the &quot;Part Description&quot; is shown.</description>
        <formula>IF(NOT(ISBLANK(Part__c)), Part__r.Description__c, New_Part_Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LT_Days__c</fullName>
        <label>LT Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <description>Created by MFGPRO ERP team</description>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Item_Margin__c</fullName>
        <label>Line Item Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Date__c</fullName>
        <description>The field is used to store the date of lost and dead</description>
        <label>Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_Fiscal_Month__c</fullName>
        <description>This field contains the lost or dead dates fiscal month.</description>
        <label>Lost Fiscal Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Fiscal_Quarter__c</fullName>
        <description>This field contains the lost or dead dates fiscal quarter</description>
        <label>Lost Fiscal Quarter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Fiscal_Year__c</fullName>
        <description>This field contains the lost or dead dates fiscal year.</description>
        <label>Lost Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Text__c</fullName>
        <label>Lost Reason Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Approval criteria not met</fullName>
                </value>
                <value>
                    <fullName>Awaiting customer response</fullName>
                </value>
                <value>
                    <fullName>Awaiting qualification test results</fullName>
                </value>
                <value>
                    <fullName>Customer Program Change/Cancellation</fullName>
                </value>
                <value>
                    <fullName>Customer project on hold</fullName>
                </value>
                <value>
                    <fullName>Customer request</fullName>
                </value>
                <value>
                    <fullName>Lack of TE resources</fullName>
                </value>
                <value>
                    <fullName>Missing customer requirements</fullName>
                </value>
                <value>
                    <fullName>Missing TE requirements</fullName>
                </value>
                <value>
                    <fullName>No potential customer</fullName>
                </value>
                <value>
                    <fullName>PAC decision</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Project transfer to different region</fullName>
                </value>
                <value>
                    <fullName>Quote sent, awaiting customer</fullName>
                </value>
                <value>
                    <fullName>TE Engineering resources</fullName>
                </value>
                <value>
                    <fullName>TE portfolio / priority decision</fullName>
                </value>
                <value>
                    <fullName>TE technical solution not competitive</fullName>
                </value>
                <value>
                    <fullName>Timeline</fullName>
                </value>
                <value>
                    <fullName>Customer cancellation</fullName>
                </value>
                <value>
                    <fullName>Replaced by other project</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Duplicate part number</fullName>
                </value>
                <value>
                    <fullName>Customer Strategy Change</fullName>
                </value>
                <value>
                    <fullName>Engineering Rejected</fullName>
                </value>
                <value>
                    <fullName>Service/Responsiveness</fullName>
                </value>
                <value>
                    <fullName>Won by other TE Customer</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Price and Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MED_Confidence_Pct__c</fullName>
        <description>Formula based on Confidence picklist values
      &quot;Lost&quot;, 0, 
      &quot;On Hold&quot;, 0,
      &quot;Dead&quot;, 0, 
      &quot;Weak&quot;, 25, 
      &quot;50/50&quot;, 50, 
      &quot;Likely&quot;, 75,
      &quot;Commit&quot;, 100,
      &quot;Won&quot;, 100</description>
        <formula>CASE(Status__c,
      &quot;Lost&quot;, 0, 
      &quot;On Hold&quot;, 0,
      &quot;Dead&quot;, 0, 
      &quot;Weak&quot;, 25, 
      &quot;50/50&quot;, 50, 
      &quot;Likely&quot;, 75,
      &quot;Commit&quot;, 100,
      &quot;Won&quot;, 100, 
      0
)</formula>
        <inlineHelpText>Formula based on Confidence picklist values
      &quot;Lost&quot;, 0, 
      &quot;On Hold&quot;, 0,
      &quot;Dead&quot;, 0, 
      &quot;Weak&quot;, 25, 
      &quot;50/50&quot;, 50, 
      &quot;Likely&quot;, 75,
      &quot;Commit&quot;, 100,
      &quot;Won&quot;, 100</inlineHelpText>
        <label>MED Confidence Pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MED_Part_Margin__c</fullName>
        <description>Used by Medical business to indicate Margin percent of part</description>
        <inlineHelpText>Used by Medical business to indicate Margin percent of part</inlineHelpText>
        <label>MED Part Margin</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MED_Weighted_5_Year_Part_Revenue__c</fullName>
        <description>MED Part Margin * X5_year_part_revenue__c. X5_year_part_revenue__c is current FY plus next 4 FY values. Medical will use this to calculate a weighted value at the opportunity level.</description>
        <formula>(MED_Part_Margin__c ) *  X5_year_part_revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MED Part Margin * X5_year_part_revenue__c. X5_year_part_revenue__c is current FY plus next 4 FY values. Medical will use this to calculate a weighted value at the opportunity level.</inlineHelpText>
        <label>MED Weighted 5 Year Part Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MS_Gain_Dollars__c</fullName>
        <formula>(TAM_QTY__c * Desired_TE_Market_Share__c * TE_Required_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Gain Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager_Hierarchy__c</fullName>
        <description>GPL__r.Global_PM__r.Id +&apos;mngrid&apos;+ GPL__r.CBC1__c +&apos;CBCNum&apos;+ Opportunity__r.RecordType.Name+&apos;RT&apos;+GPL__r.CSD_EGM__r.Id+&apos;EGM&apos;+GPL__r.Product_Manager__r.Id+&apos;PGM&apos;</description>
        <formula>GPL__r.Global_PM__r.Id +&apos;mngrid&apos;+ GPL__r.CBC1__c +&apos;CBCNum&apos;+ Opportunity__r.RecordType.Name+&apos;RT&apos;+
IF(
	RecordType.DeveloperName == &apos;Sales_Parts&apos;,
	IF(
		Opportunity__r.Number_of_Parts__c &lt;= 0, 
		GPL__r.CSD_EGM__r.Id, 
		NULL
	),
	GPL__r.CSD_EGM__r.Id
)
+&apos;EGM&apos;+
IF(
	RecordType.DeveloperName == &apos;Sales_Parts&apos;,
	IF(
		Opportunity__r.Number_of_Parts__c &lt;= 0, 
		GPL__r.Product_Manager__r.Id, 
		NULL
	),
	GPL__r.Product_Manager__r.Id
)
+&apos;PGM&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_A__c</fullName>
        <formula>(UnitPrice__c - Cost_Set_75__c - DiscountA_A__c)/UnitPrice__c</formula>
        <label>Margin A%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_B__c</fullName>
        <formula>(UnitPrice__c - Cost_Set_75__c - DiscountB_B__c )/UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin B%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_CS75__c</fullName>
        <formula>IF(Quantity__c * Offered_Price__c &gt; 0,((Offered_Price__c- Standard_Cost__c)/Offered_Price__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin % (CS75)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_C__c</fullName>
        <formula>(UnitPrice__c - Cost_Set_75__c -  DiscountC_C__c  )/UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin C%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market_Date__c</fullName>
        <formula>Part__r.Market_Date__c</formula>
        <label>Market Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matches_Part_from_PLM__c</fullName>
        <description>This field compares the Proposal_Part_Key_Id, which is set be the integration with PLM to the part key id of the part defined on the proposal part.</description>
        <formula>IF(Proposal_Part_Key_Id__c = Part__r.PART_KEY_ID__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <inlineHelpText>If these are not equal, the field is false, and the PLM integration will attempt to set the part__c field with the part with the matching part key id in Part__c.</inlineHelpText>
        <label>Matches Part from PLM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Qty_in_Standard_lead_time__c</fullName>
        <description>The maximum qty is provided by MFGPRO</description>
        <label>Max Qty in Standard lead time</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Order_Qty__c</fullName>
        <label>Min Order Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDRForecastCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be set to checked when forecast is created for this part from apex code. Should be handled only through apex. Don&apos;t add to any page layout except for System Admin.</description>
        <inlineHelpText>Will be checked if forecast is created for this part. False otherwise.</inlineHelpText>
        <label>NDR Forecast Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDR_Alternate_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternative Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDR_Approve_Reject_Indicator__c</fullName>
        <description>DMM Approve/ Reject Response is captured in this field and sent to SAP with rejection reason and Rejection  Comments</description>
        <label>Approve Reject Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Award_Type_Description__c</fullName>
        <label>Award Type Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Award_Type_Value__c</fullName>
        <label>Award Type Value</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Comment__c</fullName>
        <label>DMM Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDR_Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Competitor_Part_Number__c</fullName>
        <label>Competitor Part Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Competitor_Price_Currency__c</fullName>
        <label>Competitor Price Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Competitor_Price_Per__c</fullName>
        <label>Competitor Price Per</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_Competitor_Price_UOM__c</fullName>
        <label>Competitor Price UOM</label>
        <length>5</length>
        <type>Text</type>
    </fields>
</CustomObject>